tests/harness/errors/004_circular.eu
#!/usr/bin/env eu

f: f(f)
